crates/llvmkit-ir/tests/compile_fail/block_call_wrong_arity.stderr
error[E0277]: argument tuple `(ConstantIntValue<'_, i32, Brand<'_>>,)` does not match the callee's parameter schema `(i32, i32)`
  --> tests/compile_fail/block_call_wrong_arity.rs:33:35
   |
33 |         let _ = head.label().call((x,));
   |                              ---- ^^^^ the trait `CallArgs<'_, (i32, i32), Brand<'_>>` is not implemented for `(ConstantIntValue<'_, i32, Brand<'_>>,)`
   |                              |
   |                              required by a bound introduced by this call
   |
   = note: argument count and per-position types must match the callee's typed signature
   = help: the following other types implement trait `CallArgs<'ctx, Params, B>`:
             `()` implements `CallArgs<'_, (), B>`
             `(V0, V1)` implements `CallArgs<'_, (P0, P1), B>`
             `(V0, V1, V2)` implements `CallArgs<'_, (P0, P1, P2), B>`
             `(V0, V1, V2, V3)` implements `CallArgs<'_, (P0, P1, P2, P3), B>`
             `(V0, V1, V2, V3, V4)` implements `CallArgs<'_, (P0, P1, P2, P3, P4), B>`
             `(V0, V1, V2, V3, V4, V5)` implements `CallArgs<'_, (P0, P1, P2, P3, P4, P5), B>`
             `(V0, V1, V2, V3, V4, V5, V6)` implements `CallArgs<'_, (P0, P1, P2, P3, P4, P5, P6), B>`
             `(V0, V1, V2, V3, V4, V5, V6, V7)` implements `CallArgs<'_, (P0, P1, P2, P3, P4, P5, P6, P7), B>`
           and $N others
note: required by a bound in `BasicBlockLabel::<'ctx, R, B, Params>::call`
  --> src/basic_block.rs
   |
   |     pub fn call<A>(self, args: A) -> BlockCall<'ctx, R, B, Params>
   |            ---- required by a bound in this associated function
   |     where
   |         A: CallArgs<'ctx, Params, B>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `BasicBlockLabel::<'ctx, R, B, Params>::call`
